feat: Update UI issues
