# docs/swagger.yaml
@@ -63,11 +63,8 @@ definitions:
       content:
         maxLength: 100
         type: string
-      user_id:
-        type: integer
     required:
     - content
-    - user_id
     type: object
   main.createPostPayload:
     properties:
@@ -181,6 +178,17 @@ definitions:
         $ref: '#/definitions/store.Role'
       role_id:
         type: integer
+      username:
+        type: string
+    type: object
+  store.UserWithFollowStatus:
+    properties:
+      created_at:
+        type: string
+      id:
+        type: integer
+      is_followed:
+        type: boolean
       username:
         type: string
     type: object
@@ -442,6 +450,39 @@ paths:
       summary: Creates a comment on a post
       tags:
       - comments
+  /users:
+    get:
+      consumes:
+      - application/json
+      description: Fetches a paginated list of all active users with follow status
+      parameters:
+      - default: 20
+        description: Limit
+        in: query
+        name: limit
+        type: integer
+      - default: 0
+        description: Offset
+        in: query
+        name: offset
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/store.UserWithFollowStatus'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Fetches all active users
+      tags:
+      - users
   /users/{id}:
     get:
       consumes:
